--- a/css/style.css
+++ b/css/style.css
@@ -50,14 +50,19 @@ body {
   font-variant: small-caps;
 }
 
+.user-content {
+  font-size: 0.8 rem;
+}
+
 /* heigth and width */
 
 .vh-100 {
   height: 100vh;
 }
 
-.vh-40 {
-  height: 40vh;
+.vh-30 {
+  height: 30vh;
+  width: 40vw;
 }
 
 /* padding and margin */
@@ -153,15 +158,103 @@ nav .navbar-list .navbar-elements {
   }
 }
 
+/* scroll section */
+
+#section03 a {
+  padding-top: 60px;
+}
+
+#section03 a span {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 46px;
+  height: 46px;
+  margin-left: -23px;
+  border: 1px solid #fff;
+  border-radius: 100%;
+  box-sizing: border-box;
+}
+
+#section03 a span::after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  content: '';
+  width: 16px;
+  height: 16px;
+  margin: -12px 0 0 -8px;
+  border-left: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  box-sizing: border-box;
+}
+
+#section03 a span::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  content: '';
+  width: 44px;
+  height: 44px;
+  box-shadow: 0 0 0 0 rgba(255, 255, 255, .1);
+  border-radius: 100%;
+  opacity: 0;
+  -webkit-animation: sdb03 3s infinite;
+  animation: sdb03 3s infinite;
+  box-sizing: border-box;
+}
+
+@-webkit-keyframes sdb03 {
+  0% {
+    opacity: 0;
+  }
+  30% {
+    opacity: 1;
+  }
+  60% {
+    box-shadow: 0 0 0 60px rgba(255, 255, 255, .1);
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes sdb03 {
+  0% {
+    opacity: 0;
+  }
+  30% {
+    opacity: 1;
+  }
+  60% {
+    box-shadow: 0 0 0 60px rgba(255, 255, 255, .1);
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 /* media querie */
 
 @media only screen and (min-width :280px) {}
 
 @media only screen and (min-width:768px) {
   .p-container {
-    padding: 16rem 2.8rem;
+    padding: 13.7rem 3.7rem;
   }
   .user-info {
     padding: 3rem 0;
+  }
+  .user-content {
+    font-size: .5 rem;
+  }
+  .vh-30 {
+    height: 30vh;
+    width: 40vw;
   }
 }
