updating scroll icon

--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ nav .navbar-list .navbar-elements {
 
 #section03 a span {
   position: absolute;
-  top: 0;
+  top:85%;
   left: 50%;
   width: 46px;
   height: 46px;
